# deng

./: .gitignore  .gitmodules  CMakeLists.txt  FetchDependencies.py  LICENSE.md  Makefile  NOTE_FOR_MORNING  README.md  USAGE.md  \  compile_flags.txt  imgui.ini  premake5.lua  statue.das  test.cpp  test.py  vcpkg-init.py
.clangd/index/: Algorithm.cpp.0630A8BEEBD5F2DE.idx  Algorithm.h.F313472FE08E004E.idx  AnimationSampler.cpp.794EC20DCE4DED3E.idx  AnimationSampler.h.ED7A156475B4C61B.idx  Api.h.0FE74B1914F3111D.idx  Api.h.CE66E96F8E554788.idx  AsciiLineReader.cpp.784B2D54D2291DBE.idx  AsciiLineReader.h.4BD6D2DE1EE1886D.idx  AsciiStreamReader.cpp.A333A0B6D81AED96.idx  AsciiStreamReader.h.06036E974D04F1E3.idx  Base64Decoder.cpp.80BF1DEC53F5D3E9.idx  Base64Decoder.h.D904FA10E05B9338.idx  BaseTypes.h.4ADA14D4F3FB0995.idx  BufferAlignment.h.A0E79A34C2A5B723.idx  BufferImageTypeResolver.cpp.96AD009A7622367E.idx  BufferImageTypeResolver.h.15C24806250E5136.idx  Camera3D.h.E961F43512A75EDB.idx  CameraTransformManager.cpp.998A48F6294172C2.idx  CameraTransformManager.h.46428202CB2DADD1.idx  DASTool.cpp.AACF677151B64218.idx  DASTool.h.F5C3F8A8A2483953.idx  DasParser.cpp.8C2C5FB29F621BEC.idx  DasParser.h.E8489CD502FE3840.idx  DasReaderCore.cpp.6D26448B09C949DB.idx  DasReaderCore.h.F3F4AEF1B18CFF6B.idx  DasStructures.cpp.76298D9EDE203F46.idx  DasStructures.h.13DC66F587DFE1DB.idx  DasWriterCore.cpp.2ADF41E482616EC4.idx  DasWriterCore.h.F9D0D527F1E470B6.idx  Debug.cpp.8351D2E2ACEFF721.idx  Debug.h.6E51F78502DBF079.idx  EditorCamera.cpp.ADEC2B2B7272C8FD.idx  EditorCamera.h.CB52A297D85DE667.idx  ErrorDefinitions.h.0E94ABA55FC6A57A.idx  ErrorHandlers.cpp.42F561F7F7EFDD34.idx  ErrorHandlers.h.6DE6790441B25325.idx  FirstPersonCamera.cpp.B0160574DD4D81D0.idx  FirstPersonCamera.h.481A024237FF8A23.idx  GLTFCompiler.cpp.1922CEBB5C27B46C.idx  GLTFCompiler.h.8C2CEC807E5CD0FD.idx  (+116 more)
CMake/: Sandbox.cmake  layers.cmake  libdeng.cmake
CMake/Demos/: BasicLightingDemo.cmake  CVarTest.cmake  CompileTimeMapTest.cmake  ComputeParticles.cmake  (+5 more)
Demos/: CVarTest.cpp  CompileTimeMapTest.cpp  ImGuiApp.cpp  SDLTriangleApp.cpp  SIDTest.cpp
Sources/: App.cpp  CVars.cpp  CameraTransformer.cpp  DasExternalComponentizer.cpp  ErrorDefinitions.cpp  FileSystemGraphicsShader.cpp  FileSystemShader.cpp  FileTextureBuilder.cpp  GPUMemoryAllocator.cpp  HLSLGraphicsShaderSpirvCompiler.cpp  HLSLGraphicsShaderToSpirvCompiler.cpp  IByteCodeToolset.cpp  IGraphicsMemory.cpp  IGraphicsPipeline.cpp  IGraphicsShader.cpp  IShader.cpp  ImGuiLayer.cpp  ImGuiResourceBuilders.cpp  Missing.cpp  MissingTextureBuilder.cpp  ProgramFilesManager.cpp  SDLWindowContext.cpp  SID.cpp  Scene.cpp  SceneRenderer.cpp  Shader.cpp  ShaderDefinitions.cpp  Singletons.cpp  SkyboxBuilders.cpp  SpirvByteCodeToolset.cpp  UberShader.cpp  VulkanDescriptorAllocator.cpp  VulkanDescriptorSetLayoutCreator.cpp  VulkanFramebuffer.cpp  VulkanGraphicsInstantiator.cpp  VulkanGraphicsPipeline.cpp  VulkanHelpers.cpp  VulkanImage.cpp  VulkanInstanceCreator.cpp  VulkanManagedBuffer.cpp  (+5 more)
Tests/: BasicLightingTest.cpp  ImGuiApp.cpp  SDLTriangleApp.cpp
Tools/: spv2c.py
cmake/: FetchDependencies.cmake  FetchTrunk.cmake  GameEditor.cmake  TextureDump.cmake  ViewModels.cmake  copy.cmake  crosscompile-mingw.cmake  deng-game-editor.cmake  imgui.cmake  libdas.cmake  libdeng.cmake  libnwin.cmake  lua.cmake  pydeng.cmake  rt.cmake
docs/: VEC_SPEC  das.md  getting-started.html  getting-started.md
icons/: Asset_Unknown.h
include/: AnimationSampler.h  Api.h  AssetManager.h  AsyncGuiPopups.h  Base3DCamera.h  BaseTypes.h  BufferAlignment.h  CUtils.h  Camera3D.h  Camera3DControl.h  Camera3DEventBase.h  CameraControlBindings.h  CameraMatrix.h  CameraTransformManager.h  Collision2D.h  Conversion.h  CrossApi.h  DasCheck.h  DasFile.h  DasLoader.h  DasRuntime.h  DataUpdater.h  Deng.h  DengMath.h  EditorCamera.h  EditorCameraEvent.h  ErrorDefinitions.h  FilePicker.h  FirstPersonCamera.h  FirstPersonCameraEvents.h  GPUBufferInfo.h  GPUMemoryManager.h  GridGenerator.h  Hashmap.h  HidEventManager.h  ImGuiEntity.h  ImGuiLayer.h  ImageHeaders.h  Interpolation.h  LightManager.h  (+61 more)
premake/: DENGBox.lua  GLSLang.lua  ImGui.lua  ImGuiSandbox.lua  Libdas.lua  Libdeng.lua  Libneko.lua  OpenGLSandbox.lua  SceneEditor.lua  ShaderC.lua  Spirv.lua  SpirvTools.lua  imgui_sandbox.lua  libdeng-shared.lua  libdeng-static.lua  libdeng.lua  libneko.lua
release/: CMakeCache.txt  OpenGLImGui  OpenGLTriangle  ShaderGenerator  ShaderGeneratorTestMaker  TextureDump  ViewModels  VulkanImGui  VulkanTriangle  cmake_install.cmake  dastool
scripts/: BackendChooser.py  FetchDependencies.py  FilePicker.py  TestShaderGeneration.sh  Trunkate.sh  alphabet.go  func.go
src/: AnimationSampler.cpp  Camera3D.cpp  Camera3DEventBase.cpp  CameraMatrix.cpp  CameraTransformManager.cpp  Components.cpp  CubeGenerator.cpp  EditorCamera.cpp  Entity.cpp  ErrorDefinitions.cpp  FilePicker.cpp  FirstPersonCamera.cpp  GPUMemoryAllocator.cpp  GPUMemoryManager.cpp  GameObject.cpp  GridGenerator.cpp  ImGuiLayer.cpp  InputRegistry.cpp  Interpolation.cpp  LevelLoader.cpp  MeshLoader.cpp  Missing.cpp  ModelLoader.cpp  ModelShaderGenerator.cpp  ModelShaderManager.cpp  NativeGUICaller.cpp  NodeLoader.cpp  OpenGLBufferLoader.cpp  OpenGLFramebuffer.cpp  OpenGLRenderer.cpp  OpenGLShaderLoader.cpp  PointViewer.cpp  Primitives.cpp  ProgramFilesManager.cpp  ProjectDataManager.cpp  PythonScriptExecutor.cpp  Registry.cpp  RenderState.cpp  Renderer.cpp  SDLWindowContext.cpp  (+53 more)
tests/: BasicLightingTest.cpp  CubicsInterp.cpp  FilePickerTest.cpp  GPUMemoryAllocatorTest.cpp  Grid3DTest.h  ImGuiApp.cpp  ImGuiTest.h  LuaTest.cpp  MatrixTest.cpp  ModelLoaderApp.h  MultiFramebuffer.cpp  MultiFramebuffer.h  ODETest.cpp  OpenGLCube.cpp  OpenGLGrid3DTest.cpp  OpenGLImGui.cpp  OpenGLModelLoader.cpp  OpenGLMultiFramebuffer.cpp  OpenGLTriangle.cpp  SDLTriangleApp.cpp  ShaderGenerator.cpp  ShaderGeneratorTestMaker.cpp  TriangleApp.h  VulkanGrid3DTest.cpp  VulkanImGui.cpp  VulkanModelLoader.cpp  VulkanMultiFramebuffer.cpp  VulkanTriangle.cpp
textures/: checkered.ppm
(+598 files in other folders)
